# server-task-manager

./: .gitignore  .gitmodules  20230307_125810.log.json  Readme.md  app.ipynb  app.py  build_docker.py  cv-backend.service  dataset.py  docker_test.py  install.sh  log_json.py  main.py  pyproject.toml
blender/: Dockerfile  Readme.md
blender-gen/: Dockerfile
blender/EXAMPLE_ID/dataset/: annotation_coco.json
data/network/test/: faster_rcnn_r50_fpn.py
dataset/: Dockerfile  Readme.md
dataset/EXAMPLE_ID/: parameters.json
openmm/: Dockerfile  Readme.md
src/: config.py  constants.py  database.py  logger.py  logs.py  s3.py  task.py  utils.py
src/namespaces/: __init__.py  data.py  log.py  task.py
users/19938882/blender/config/: config.json
